<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>horiokart_description</name>
  <version>0.0.0</version>
  <description>
    Horiokart description package
  </description>
  <maintainer email="chuson@todo.todo">chuson</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
