<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>horiokart_simulator_client</name>
  <version>0.0.0</version>
  <description>
    Horiokart devices package
  </description>
  <maintainer email="chuson@todo.todo">chuson</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>ros_tcp_endpoint</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
